Replace build.js with rollup config

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,9 @@
 
     <title>ЭИОС</title>
 
-    <script src="/public/vendors/polyfill.js"></script>
-    <script src="/public/vendors/system.js"></script>
-    <script src="/public/vendors/system.named-register.js"></script>
-    <script src="/public/vendors/common-modules.js"></script>
+    <script src="/polyfill.min.js"></script>
+    <script src="/system.min.js"></script>
+    <script src="/named-register.min.js"></script>    
 
     <style>
         html,
@@ -30,7 +29,7 @@
 <body>
     <div id="root"></div>
     <script>
-        System.import('/public/index.js')
+        System.import('/index.js')
     </script>
 </body>
 
